--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -3,28 +3,28 @@
 @Misc{ant2016,
   author =       {{ANT Wireless}},
   title =        {The Wireless Sensor Network Solution},
-  howpublished = {Retrieved May 23, 2016, from \url{https://www.thisisant.com/}},
+  howpublished = {Retrieved March 23, 2016, from \url{https://www.thisisant.com/}\EatDot},
   year =         {2016}
 }
 
 @Misc{ashford2015,
   author =       {Ashford, Warwick},
   title =        {Researchers raise privacy concerns about Bluetooth Low Energy devices},
-  howpublished = {Retrieved March 18, 2016, from \url{http://www.computerweekly.com/news/4500246790/Researchers-raise-privacy-concerns-about-Bluetooth-Low-Energy-devices}},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.computerweekly.com/news/4500246790/Researchers-raise-privacy-concerns-about-Bluetooth-Low-Energy-devices}\EatDot},
   year =         {2015}
 }
 
 @Misc{bbcnews2015,
   author =       {{BBC News}},
   title =        {China imposes smartwatch and wearable tech army ban},
-  howpublished = {Retrieved March 18, 2016, from \url{http://www.bbc.com/news/technology-32718266}},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.bbc.com/news/technology-32718266}\EatDot},
   year =         {2015}
 }
 
 @Misc{blakesnow2016,
   author =       {Snow, Blake},
   title =        {Developers Wanted: Bluetooth Low Energy is the Future of Wearables},
-  howpublished = {Retrieved May 10, 2016, from \url{http://www.broadcom.com/blog/ces/developers-wanted-bluetooth-low-energy-is-the-future-of-wearables/}},
+  howpublished = {Retrieved March 10, 2016, from \url{http://www.broadcom.com/blog/ces/developers-wanted-bluetooth-low-energy-is-the-future-of-wearables/}\EatDot},
   year =         {2015}
 }
 
@@ -35,17 +35,31 @@
   year =    {2014}
 }
 
+@Misc{bluetooth2016awareness,
+  author =       {{Bluetooth SIG}},
+  title =        {Consumer awareness and preference of Bluetooth technology at all-time high, demand for IoT connectivity soars},
+  howpublished = {Retrieved April 28, 2016, from \url{https://www.bluetooth.com/news/pressreleases/2016/04/26/consumer-awareness-preference-of-bluetoothtechnology-at-all-time-highdemand-for-iot-connectivity-soars}\EatDot},
+  year =         {2016}
+}
+
+@Misc{bluetooth2016roadmap,
+  author =       {{Bluetooth SIG}},
+  title =        {Bluetooth technology to gain longer range faster speed mesh networking in 2016},
+  howpublished = {Retrieved May 20, 2016, from \url{https://www.bluetooth.com/news/pressreleases/2015/11/11/bluetooth-technology-to-gain-longer-range-faster-speed-mesh-networking-in-2016}\EatDot},
+  year =         {2016}
+}
+
 @Misc{bluetooth2016training,
   author =       {{Bluetooth SIG}},
   title =        {Get Bluetooth Trained},
-  howpublished = {Retrieved May 23, 2016, from \url{https://www.bluetooth.com/develop-with-bluetooth/developer-resources-tools/developer-training-videos}},
+  howpublished = {Retrieved March 23, 2016, from \url{https://www.bluetooth.com/develop-with-bluetooth/developer-resources-tools/developer-training-videos}\EatDot},
   year =         {2016}
 }
 
 @Misc{bluetoothsig2016,
   author =       {{Bluetooth SIG}},
   title =        {Our history},
-  howpublished = {Retrieved May 1, 2016, from \url{https://www.bluetooth.com/media/our-history}},
+  howpublished = {Retrieved May 1, 2016, from \url{https://www.bluetooth.com/media/our-history}\EatDot},
   year =         {2016}
 }
 
@@ -60,7 +74,7 @@
 @Misc{colitti2014,
   author =       {Colitti, Walter},
   title =        {Why ZigBee has failed in IoT interoperability},
-  howpublished = {Retrieved May 1, 2016, from \url{http://www.waltercolitti.consulting/analysis/why-zigbee-has-failed-in-iot-interoperability/}},
+  howpublished = {Retrieved May 1, 2016, from \url{http://www.waltercolitti.consulting/analysis/why-zigbee-has-failed-in-iot-interoperability/}\EatDot},
   year =         {2014}
 }
 
@@ -85,21 +99,21 @@
 @Misc{gartner2012,
   author =       {Pettey, Christy and {van der Meulen}, Rob},
   title =        {Gartner's 2012 Hype Cycle for Emerging Technologies Identifies "Tipping Point" Technologies That Will Unlock Long-Awaited Technology Scenarios},
-  howpublished = {Retrieved May 7, 2016, from \url{http://www.gartner.com/newsroom/id/2124315}},
+  howpublished = {Retrieved May 7, 2016, from \url{http://www.gartner.com/newsroom/id/2124315}\EatDot},
   year =         {2012}
 }
 
 @Misc{gartner2014,
   author =       {Rivera, Janessa and {van der Meulen}, Rob},
   title =        {Gartner's 2014 Hype Cycle for Emerging Technologies Maps the Journey to Digital Business},
-  howpublished = {Retrieved March 18, 2016, from \url{http://www.gartner.com/newsroom/id/2819918}},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.gartner.com/newsroom/id/2819918}\EatDot},
   year =         {2014}
 }
 
 @Misc{gartner2015,
   author =       {{van der Meulen}, Rob},
   title =        {Gartner Says 6.4 Billion Connected "Things" Will Be in Use in 2016, Up 30 Percent From 2015},
-  howpublished = {Retrieved March 18, 2016, from \url{http://www.gartner.com/newsroom/id/3165317}},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.gartner.com/newsroom/id/3165317}\EatDot},
   year =         {2015}
 }
 
@@ -142,14 +156,14 @@
 @Misc{goodin2015,
   author =       {Goodin, Dan},
   title =        {9 baby monitors wide open to hacks that expose users’ most private moments},
-  howpublished = {Retrieved March 19, 2016, from \url{http://arstechnica.com/security/2015/09/9-baby-monitors-wide-open-to-hacks-that-expose-users-most-private-moments/} },
+  howpublished = {Retrieved March 19, 2016, from \url{http://arstechnica.com/security/2015/09/9-baby-monitors-wide-open-to-hacks-that-expose-users-most-private-moments/}\EatDot},
   year =         {2015}
 }
 
 @Misc{greenberg2015,
   author =       {Greenberg, Andy},
   title =        {Hackers Remotely Kill a Jeep on the Highway - With Me in It},
-  howpublished = {Retrieved March 19, 2016, from \url{https://www.wired.com/2015/07/hackers-remotely-kill-jeep-highway/}},
+  howpublished = {Retrieved March 19, 2016, from \url{https://www.wired.com/2015/07/hackers-remotely-kill-jeep-highway/}\EatDot},
   year =         {2015}
 }
 
@@ -182,14 +196,14 @@
 @Misc{hirsch2015,
   author =       {Hirsch, Jerry},
   title =        {Hackers can now hitch a ride on car computers},
-  howpublished = {Retrieved March 19, 2016, from \url{http://www.latimes.com/business/autos/la-fi-hy-car-hacking-20150914-story.html} },
+  howpublished = {Retrieved March 19, 2016, from \url{http://www.latimes.com/business/autos/la-fi-hy-car-hacking-20150914-story.html}\EatDot},
   year =         {2015}
 }
 
 @Misc{iyer2015,
   author =       {Iyer, Kavita},
   title =        {Smartwatches vulnerable to hacking says Researchers},
-  howpublished = {Retrieved March 18, 2016, from \url{http://www.techworm.net/2015/09/smartwatches-vulnerable-to-hacking-says-researchers.html}},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.techworm.net/2015/09/smartwatches-vulnerable-to-hacking-says-researchers.html}\EatDot},
   year =         {2015}
 }
 
@@ -203,7 +217,7 @@
 @Misc{kessler2015,
   author =       {Kessler, Aaron M.},
   title =        {Fiat Chrysler Issues Recall Over Hacking},
-  howpublished = {Retrieved March 19, 2016, from \url{http://www.nytimes.com/2015/07/25/business/fiat-chrysler-recalls-1-4-million-vehicles-to-fix-hacking-issue.html} },
+  howpublished = {Retrieved March 19, 2016, from \url{http://www.nytimes.com/2015/07/25/business/fiat-chrysler-recalls-1-4-million-vehicles-to-fix-hacking-issue.html}\EatDot},
   year =         {2015}
 }
 
@@ -218,7 +232,7 @@
 @Misc{nokia2006,
   author =       {{Nokia Corporation}},
   title =        {Nokia introduces Wibree technology as open industry initiative},
-  howpublished = {Retrieved May 1, 2016, from \url{http://company.nokia.com/en/news/press-releases/2006/10/03/nokia-introduces-wibree-technology-as-open-industry-initiative}},
+  howpublished = {Retrieved May 1, 2016, from \url{http://company.nokia.com/en/news/press-releases/2006/10/03/nokia-introduces-wibree-technology-as-open-industry-initiative}\EatDot},
   year =         {2006}
 }
 
@@ -237,14 +251,14 @@
 @Misc{porup2016,
   author =       {Porup, J.M.},
   title =        {"Internet of Things" security is hilariously broken and getting worse},
-  howpublished = {Retrieved March 19, 2016, from \url{http://arstechnica.com/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/} },
+  howpublished = {Retrieved March 19, 2016, from \url{http://arstechnica.com/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}\EatDot},
   year =         {2016}
 }
 
 @Misc{porup20162,
   author =       {Porup, J.M.},
   title =        {How to search the Internet of Things for photos of sleeping babies},
-  howpublished = {Retrieved March 18, 2016, from \url{http://arstechnica.co.uk/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}},
+  howpublished = {Retrieved March 18, 2016, from \url{http://arstechnica.co.uk/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}\EatDot},
   year =         {2015}
 }
 
@@ -326,14 +340,14 @@
 @Misc{zigbee2016,
   author =       {{The ZigBee Alliance}},
   title =        {The ZigBee Alliance, Control your World},
-  howpublished = {Retrieved May 23, 2016, from \url{http://www.zigbee.org/}},
+  howpublished = {Retrieved March 23, 2016, from \url{http://www.zigbee.org/}\EatDot},
   year =         {2016}
 }
 
 @Misc{zwave2016,
   author =       {{ZWave Alliance}},
   title =        {Z-Wave Home control},
-  howpublished = {Retrieved May 23, 2016, from \url{http://www.z-wave.com/}},
+  howpublished = {Retrieved March 23, 2016, from \url{http://www.z-wave.com/}\EatDot},
   year =         {2016}
 }
 
